# proc-macro-workshop

./: .gitignore
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: 04-type-parameter.rs  05-phantom-data.rs  07-associated-type.rs  08-escape-hatch.rs  progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 09-interaction-with-macrorules.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
