[package]
name = "bitfield"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[[example]]
name = "test"
path = "tests/01-specifier-types.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
syn = { version = "2.0.53", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"