[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[[example]]
name = "test"
path = "tests/03-custom-format.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff", "dissimilar"] }

[dependencies]
syn = { version = "2.0.53", features = ["extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"
proc-macro-error = "1.0.4"
log = "0.4.21"
