[package]
name = "seq"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[[example]]
name = "test"
path = "tests/03-expand-four-errors.rs"

[dev-dependencies]
trybuild = "1.0.49"

[dependencies]
syn = { version = "2.0.53", features = ["extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"
